# polymarket-mcp-server

./: pyproject.toml
src/polymarket_mcp/: server.py
src/polymarket_mcp/web/: app.py
tests/: test_issue_fixes.py
